// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ConversationItem renders for case #1 1`] = `
<li>
  <a
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root makeStyles-link-1 MuiListItem-gutters MuiListItem-divider MuiListItem-button"
    href="/messages/test"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-2"
    >
      <img
        alt="bob"
        className="MuiAvatar-img"
        src="photoUrl"
      />
    </div>
    <p
      className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInherit"
    >
      bob
    </p>
  </a>
</li>
`;

exports[`ConversationItem renders for case #2 1`] = `
<li>
  <a
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root makeStyles-link-1 MuiListItem-gutters MuiListItem-divider MuiListItem-button"
    href="/messages/test"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-2"
    >
      <img
        alt="bill"
        className="MuiAvatar-img"
        src="photoUrl2"
      />
    </div>
    <p
      className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInherit"
    >
      bill
    </p>
    <span
      className="MuiTouchRipple-root"
    />
  </a>
</li>
`;

exports[`ConversationItem renders for case #3 1`] = `
<li>
  <a
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root makeStyles-link-1 MuiListItem-gutters MuiListItem-divider MuiListItem-button Mui-selected"
    href="/messages/test"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="button"
    tabIndex={0}
  >
    <div
      className="MuiAvatar-root MuiAvatar-circle makeStyles-avatar-2"
    >
      <img
        alt="bill"
        className="MuiAvatar-img"
        src="photoUrl2"
      />
    </div>
    <p
      className="MuiTypography-root MuiTypography-body1 MuiTypography-colorInherit"
    >
      bill
    </p>
  </a>
</li>
`;
